{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 205,
  "lineage": "81b3d8bc-f1d4-aea3-d7cf-fc4433f57174",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.226.254.77",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-04T22:44:02.395-07:00",
            "id": "projects/terraform-gcp-demo-328005/regions/us-central1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "terraform-gcp-demo-328005",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/regions/us-central1/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-04T22:43:50.883-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-demo-328005/global/firewalls/gritfy-firewall-externalssh",
            "log_config": [],
            "name": "gritfy-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-demo-328005",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/global/firewalls/gritfy-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-04T22:43:50.807-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-gcp-demo-328005/global/firewalls/gritfy-webserver",
            "log_config": [],
            "name": "gritfy-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/global/networks/default",
            "priority": 1000,
            "project": "terraform-gcp-demo-328005",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/global/firewalls/gritfy-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210928",
                    "size": 30,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/zones/us-central1-a/disks/devserver6"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-gcp-demo-328005/zones/us-central1-a/instances/devserver6",
            "instance_id": "7159029518587812033",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "cr7abelarde:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDlo2eoDNxWaeFq66GxqKZJSxvzd7HysudechuoGJukZbbdf1iMFfR/q8NhC0JXcXqblHRp92gCvwYPulZSrRVXYplUMdWM4VW3CFpqNbrMjzFpmbAhRf1H7/mmF08g0GErLLNdacaG85xZqB6fqNkEfHuLiaJ+gsqGmB0ZZjhs9ip9Dn0JAyGGM6xn/LIDNHHD2kslgFr5093nMErTwSMqnDCBLefhxsUzt1F4gooxnpcgCiwJbtsVZ9T/Wip/DY+uQTF48wwRsB8H4UNxZMXY+mN4NZPOjJ9ytw3oMV0YX6pLjslwl1xM4KPmRWsgIRb4Z4cMhTG/9j+YGl1edrBNgzb/rStLZQ9POknq6kzwhACuG1YjRJFhFN93FDA+WFeYF6qmPSuihIIakJKM4MqcWQ/4lQiPnjYtdtPyc [...]
            },
            "metadata_fingerprint": "3uB2WCoPxKQ=",
            "name": "devserver6",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.254.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/global/networks/default",
                "network_ip": "10.128.0.27",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/regions/us-central1/subnetworks/default",
                "subnetwork_project": "terraform-gcp-demo-328005"
              }
            ],
            "project": "terraform-gcp-demo-328005",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-gcp-demo-328005/zones/us-central1-a/instances/devserver6",
            "service_account": [
              {
                "email": "terraform-gcp-demo@terraform-gcp-demo-328005.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}